[package]
name = "rawstdraw"
version = "0.1.1"
description = "Rust bindings for rawdraw"
repository = "https://github.com/overlisted/rawstdraw"
readme = "README.md"
license-file = "COPYING"
keywords = ["ffi", "rawdraw", "multiplatform"]
categories = ["api-bindings", "graphics", "rendering"]
license = "GPL-3.0-or-later"
authors = ["Ilya Maximov <mail@overlisted.net>"]
edition = "2018"
links = "rawdraw"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
mut_static = "5.0.0"

[build-dependencies]
cc = "1.0.65"
target-lexicon = "0.11.1"
